objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Units__c</fullName>
        <description>Units field is used for Agronomy opportunities.</description>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Account_ID__c</fullName>
        <formula>Account.X18_Digit_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Lead_ID__c</fullName>
        <description>The 18 Digit Lead ID is mapped over from the Lead</description>
        <label>18 Digit Lead ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Opportunity_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Opportunity ID</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Account_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Won</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Key_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Top_20_Prospect_Opportunity__c</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Key_Opportunity__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Key Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Closed_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Closed Won</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Farm_VIP_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Sales_Division__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Primary_Campaign_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Primary_Campaign_FARM_VIP_Indicator__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Open Farm VIP Opportunities</label>
        <sharedTo>
            <group>Dealer_Business_Specialist</group>
            <group>Inside_Sales_Users</group>
            <group>LPS_Users</group>
            <group>Leads_Reviewer</group>
            <group>MRE_Animal_Milk_Users</group>
            <group>Sales_Specialists_Tech_Sales_Spec</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Open_Farm_VIP_Oppty_ASM</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Sales_Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Primary_Campaign_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Sales_Division_Indicator__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Primary_Campaign_FARM_VIP_Indicator__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Team&apos;s Open Farm VIP Oppty-ASM</label>
        <sharedTo>
            <group>Area_Sales_Managers</group>
            <group>Assoc_Area_Sales_Manager</group>
            <group>Dealer_Business_Manager</group>
            <group>Inside_Sales_Manager</group>
            <group>MRE_Animal_Milk_Manager</group>
            <role>CBD_National_Poultry_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Open_Farm_VIP_Oppty_SS_LPS</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 or 6)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Annual_Points__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>Sales_Division__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Primary_Campaign_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Sales_Division_Indicator__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Primary_Campaign_FARM_VIP_Indicator__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Opportunity_Owner_is_Me__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Opportunity_Owner_Manager_is_Me__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Team&apos;s Open Farm VIP Oppty-SS &amp; LPS</label>
        <sharedTo>
            <group>LPS_Supervisor</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Top_20_Prospect_Oppty_ASM</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Top_20_Prospect_Opportunity__c</columns>
        <columns>Annual_Points__c</columns>
        <columns>Annual_Points_Override__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Top_20_Prospect_Opportunity__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Sales_Division_Indicator__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Team&apos;s Top 20 Prospect Oppty-ASM</label>
        <sharedTo>
            <group>Area_Sales_Managers</group>
            <group>Assoc_Area_Sales_Manager</group>
            <group>Inside_Sales_Manager</group>
            <group>Sales_Admins</group>
            <role>CBD_National_Poultry_Manager</role>
            <role>Training_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Top_20_Prospect_Oppty_SS</fullName>
        <booleanFilter>1 AND 2 AND (3 or 4)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Top_20_Prospect_Opportunity__c</columns>
        <columns>Annual_Points__c</columns>
        <columns>Annual_Points_Override__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Top_20_Prospect_Opportunity__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Sales_Division_Indicator__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Opportunity_Owner_is_Me__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Opportunity_Owner_Manager_is_Me__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Team&apos;s Top 20 Prospect Oppty-SS &amp; LPS</label>
        <sharedTo>
            <group>LPS_Supervisor</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Top_20_Prospect_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Top_20_Prospect_Opportunity__c</columns>
        <columns>Annual_Points__c</columns>
        <columns>Annual_Points_Override__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Key_Opportunity__c</columns>
        <columns>Primary_Campaign_Name__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Top_20_Prospect_Opportunity__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>My Top 20 Prospect Opportunities</label>
        <sharedTo>
            <role>Sales_VP</role>
            <role>Training_Role</role>
            <roleAndSubordinates>Northeast_Region</roleAndSubordinates>
            <roleAndSubordinates>Southern_Region</roleAndSubordinates>
            <roleAndSubordinates>Upper_Midwest_UMW_Region</roleAndSubordinates>
            <roleAndSubordinatesInternal>Commercial_Business_Development_CBD</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Agronomy_Opportunity</fullName>
        <active>true</active>
        <businessProcess>General Sales Process</businessProcess>
        <description>Agronomy Opportunity</description>
        <label>Agronomy Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>General_Opportunity</fullName>
        <active>true</active>
        <businessProcess>General Sales Process</businessProcess>
        <description>General Opportunity</description>
        <label>General Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Close_Date_Not_In_Future_Closed_Won</fullName>
        <active>false</active>
        <description>Close date cannot be in the future when the stage is &quot;Closed Won&quot;</description>
        <errorConditionFormula>AND ( 
OR ( 
ISPICKVAL(StageName, &quot;Closed Lost&quot;), 
ISPICKVAL(StageName, &quot;Closed Won&quot;)), 
CloseDate &gt;today() 
)</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Close Date cannot be in the future for the Stage of Closed Won or Closed Lost.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Lost_Reason_Required</fullName>
        <active>true</active>
        <description>A reason for an opportunity being Closed Lost must be indicated</description>
        <errorConditionFormula>AND(ISPICKVAL(StageName, &quot;Closed Lost&quot;),ISNULL( TEXT(Reason_Lost__c )))</errorConditionFormula>
        <errorDisplayField>Reason_Lost__c</errorDisplayField>
        <errorMessage>Please include a reason why the Opportunity was Closed Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Indicate_Other_Reason_Lost</fullName>
        <active>true</active>
        <description>Have user indicate the &quot;Other&quot; Reason Lost</description>
        <errorConditionFormula>And(
ISPICKVAL( Reason_Lost__c , &quot;Other&quot;),
isblank(Other_Reason_Lost__c))</errorConditionFormula>
        <errorDisplayField>Other_Reason_Lost__c</errorDisplayField>
        <errorMessage>Please indicate the &quot;Other&quot; reason lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Life_Stage_Required_for_Closed_Won_Lost</fullName>
        <active>true</active>
        <description>If the stage is Closed Won for a &quot;General&quot; opportunity, a Lifestage is required unless it is a non animal opportunity.</description>
        <errorConditionFormula>CONTAINS(Account.RecordType.DeveloperName, &quot;Producer&quot;) 
&amp;&amp; IsBlank(text(Life_Stage__c )) 
&amp;&amp; CONTAINS(RecordType.DeveloperName ,&quot;General&quot;) 
&amp;&amp; Text(Species__c) &lt;&gt; &quot;Non-Animal Opportunity&quot; 
&amp;&amp; Text(Species__c) &lt;&gt; &quot;Bee Colony&quot; 
&amp;&amp; Text(StageName) = &quot;Closed Won&quot;</errorConditionFormula>
        <errorDisplayField>Life_Stage__c</errorDisplayField>
        <errorMessage>Specify Lifestage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Head_Required_for_Producer_Opptys</fullName>
        <active>true</active>
        <description>Requires Total Head to be entered before saving the Oppty record.</description>
        <errorConditionFormula>CONTAINS(Account.RecordType.DeveloperName, &quot;Producer&quot;) 
&amp;&amp; (ISNULL(Total_Head__c) || Total_Head__c = 0)
&amp;&amp; CONTAINS(RecordType.DeveloperName ,&quot;General&quot;)
&amp;&amp; Text(Species__c) &lt;&gt; &quot;Non-Animal Opportunity&quot;
&amp;&amp; (Text(StageName) = &quot;Closed Won&quot; || Text(StageName) = &quot;Closed Lost&quot;)</errorConditionFormula>
        <errorDisplayField>Total_Head__c</errorDisplayField>
        <errorMessage>Total Head must be greater than zero for Producer Opportunities.</errorMessage>
    </validationRules>
</CustomObject>